@@ -205,12 +205,15 @@ brk_maximal_do (const thchar_t *s, int len, int pos[], size_t n, int do_recover)
             while (NULL != (match = brk_pool_match (pool, node))) {
                 BrkPool *del_node;
 
-                del_node = (match->shot.penalty < node->shot.penalty ||
-                            (match->shot.penalty == node->shot.penalty &&
-                            match->shot.cur_brk_pos < node->shot.cur_brk_pos))
-                        ? node : match;
-                if (del_node == node)
+                if (match->shot.penalty < node->shot.penalty ||
+                    (match->shot.penalty == node->shot.penalty &&
+                     match->shot.cur_brk_pos < node->shot.cur_brk_pos))
+                {
+                    del_node = node;
                     node = match;
+                } else {
+                    del_node = match;
+                }
                 pool = brk_pool_delete (pool, del_node);
             }
         }
